--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>codeNameMean</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="/app/main/main.css" media="screen" title="no title" charset="utf-8">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
