--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html ng-app="codeNameMean">
+<html ng-app="newIdea">
   <head>
     <meta charset="utf-8">
-    <title>codeNameMean</title>
+    <title>newIdea</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/app/main/main.css" media="screen" title="no title" charset="utf-8">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
